# gitclean

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: fsops.rs  ignore.rs  lib.rs  main.rs  patterns.rs  scan.rs  size.rs  types.rs  util.rs
tests/: integration.rs
